--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
+		"@types/rss": "^0.0.32",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.56.0",
@@ -31,5 +32,12 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"nostr-fetch": "^0.15.0",
+		"nostr-tools": "^2.1.5",
+		"nostr-typedef": "^0.9.0",
+		"rss": "^1.2.2",
+		"websocket-polyfill": "^0.0.3"
+	}
 }
